--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,5 @@
 {{page-title "DeltaTutorialBooksFrontend"}}
 
-{{! The following component displays Ember's default welcome message. }}
-<WelcomePage />
-{{! Feel free to remove this! }}
+<h2 id="title">My books</h2>
 
 {{outlet}}
